Downgrade java version for `i4URI`